2003/10/02 03:13 muppetman

	* gperl.h: bad nesting of parens in a debugging macro

	* GClosure.xs: bug in error-handling code in gperl_callback_invoke
	made it a little hard to track down the fact that a callback was
	created with the wrong parameter type.

2003/10/01 11:20 rwmcfa1

	* Glib/GBoxed.xs, Glib/GLog.xs, Glib/GObject.xs, Glib/GSignal.xs,
        Glib/GType.xs, Glib/gperl.h, Gtk2/xs/GtkAccelGroup.xs,
        Gtk2/xs/GtkIconFactory.xs, Gtk2/xs/GtkListStore.xs,
        Gtk2/xs/GtkObject.xs, Gtk2/xs/GtkToolbar.xs, Gtk2/xs/GtkTreeView.xs,
        Gtk2/xs/GtkWidget.xs: // comments -> /*

2003/09/26 04:10 muppetman

	* Glib.pm, META.yml, README, debian/changelog: 1.00rc3

	* GClosure.xs: assert that we have a callback before doing anything
	to it.  Clean up a bad comment char.

2003/09/21 20:19 rwmcfa1

	* Makefile.PL: fixed bug in specfile generation

2003/09/21 15:03 rwmcfa1

	* (lots of files): license updates/additions

2003/09/19 00:21 muppetman

	* Glib.pm, META.yml, README, debian/changelog, debian/control: updated
	for 1.00rc2 release

	* Makefile.PL: there was no version 0.1 of ExtUtils::PkgConfig...

2003/09/17 10:44 rwmcfa1

	* Makefile.PL: ExtUtils::PkgConfig can now deal with version 
	requirements using pkg-config's interface, make use of it.

	* t/6.t: removed, this tested Glib::PkgConfig

2003/09/16 23:50 rwmcfa1

	* Makefile.PL, perl-*spec.in: somewhat automated versioning system 
	implemented for depenancy modules

	* PkgConfig.pm: moved to new ExtUtils::PkgConfig module

	* MANIFEST: PkgConfig.pm removed from manifest

2003/09/16 15:00 muppetman

	* GClosure.xs, gperl.h: changed type of "tag" in signature of
	gperl_remove_exception_handler() to avoid signedness warnings.
	the tag's supposed to be a guint anyway.

	* GObject.xs, GMainLoop.xs, GParamSpec.xs, GSignal.xs, GType.xs,
	GValue.xs, Glib.xs: cleanup: casting to hush pedantic compiler
	warnings; can't have UNUSED in PREINIT:, put it in CLEANUP:;